ansible/roles/monitoring/files/grafana/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  type: ClusterIP
  ports:
  - name: interface
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: grafana
