ansible/roles/monitoring/files/grafana/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - k8s-minikub
    secretName: grafana-tls
  rules:
  - host: k8s-minikub
    http:
       paths:
        - path: /
          backend:
            serviceName: grafana
            servicePort: 3000
